{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Movement",
            "id": "e76b3a07-3856-4e03-8e8c-e24dff341f38",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "fdefec1a-f78d-471b-b783-47423179754a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "596979b4-f4c4-4016-8422-d24aa078f30e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SlowRun",
                    "type": "Button",
                    "id": "0b8954f9-ffb0-4048-a769-6aa5f406f781",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AverageRun",
                    "type": "Button",
                    "id": "0087247f-72d5-4bcd-a499-726c75beb6ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FastRun",
                    "type": "Button",
                    "id": "e3c7f0ea-94cf-41fc-a2c6-eb5fa5dd9190",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "ad22e417-5323-4e39-b89b-c4ac9dba5e64",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f098755c-123c-42b1-8ada-d1e0861da0ec",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "847421f0-7e7b-42ff-8c09-dac9e3e8ad5b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bd181e0d-9781-4eeb-a0b2-068875eb557b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b75ef925-5ec1-4b14-880e-26ae999961a1",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlowRun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32a78b67-b040-46a6-9579-92b21d6256d7",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AverageRun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10c8fccc-ba30-4544-a2a3-ce9c88c5ed17",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FastRun",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}